--- a/main.css
+++ b/main.css
@@ -1,18 +1,50 @@
 body {
-  background-color: lightblue;
+  background-color: pink;
   color: white;
 }
 
-section-1 {
-  background-color: :blue;
-  font-size: : 20px;
+h1 {
+  text-decoration: underline;
 }
 
-section-2{
-  background-color: blue;
+.section-1{
+  background-color: purple;
   font-size: 20px;
 }
 
-a{
-  /*text-decoration
+h2 {
+  text-decoration: underline;
+}
+.section-2 {
+  background-color: purple;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+section {
+  height: 300px;
+  width: 800px;
+}
+
+.image-1 {
+  height: 100px;
+  width: 100px;
+}
+
+.image-2 {
+  height: 130px;
+  width: 140px;
+}
+
+.image-3 {
+  height: 130px;
+  width: 140px;
+}
+
+.image-4 {
+  height: 200px;
+  width: 200px;
 }
